2001-03-20  Derek Price  <dprice@collab.net>

	* sanity.sh (diffmerge1): Minor formatting and syntax changes.

	    for Jacob Burckhardt  <bjacob@ca.metsci.com>

	* sanity.sh (diffmerge1): More merging behavior tests.  Specifically,
	test some cases which broke before in Karl Tomlinson's diff fix was
	checked in today.

2001-03-20  Derek Price  <dprice@collab.net>

	* sanity.sh: Don't use unescaped parens in sh outside of quotes.

2001-03-20  Derek Price  <dprice@collab.net>

	* sanity.sh: Don't remove ${TESTDIR} when -k (keep) set.

2001-03-20  Derek Price  <dprice@collab.net>

	* sanity.sh: Change usage to match the new getopts format and comment.

2001-03-16  Derek Price  <dprice@collab.net>

	* sanity.sh (modules2-nestedrename): New test.  Verifies behavior of
	renames nested under an ampersand module.
	(modules2-ampertag): New test.  Verifies an error condition which
	prevents some ampersand modules from being checked out when a tag
	is specified.

2001-03-16  Derek Price  <dprice@collab.net>

	* sanity.sh (modules2): Additional test for ampersand module behavior
	with '-d'.

	    for Greg Klanderman  <greg@itasoftware.com>

	* checkout.c (build_one_dir): Fix typo where clauses of two
	conditionals were reversed in call to Create_Admin.  This caused
	the CVS/Tag file to be removed in cases where it should have been
	set, and vice-versa.  It only surfaced in rare cases as this code
	is only invoked when using the -d option to build the path to
	check out in.  Further, the bug would only matter when checking
	out a module containing ampersand modules within it, via
	client/server CVS.

2001-03-16  Derek Price  <dprice@collab.net>

	* sanity.sh (admin-28-5): Confirm that a missing tag during an
	'admin -n' operation is not a fatal error.

2001-03-16  Derek Price  <dprice@collab.net>

	* admin.c (admin_data): Remove 'quiet' member.
	(admin_fileproc): Use global 'really_quiet' rather than
	admin_data->quiet.

2001-03-16  Derek Price  <dprice@collab.net>
